-Added Paxel Tool, With Right Click Functionality, and Custom Wood Support.
-Added Hammer Tool
-Fixed Lang Entries
-Added Recipies for Signs, Buttons, Paxel, and Hammer
-Added ALOT of Tags, Including adding 3 of my wood types to Vanilla Planks Tags

------------------------------------------------------------------------------

10/19/2024 - 10/23/2024
Version 0.4.72
Posted By: Dalton Carter

-Updated Textures for Tiberium Stones, and ALL Tiberglass
-added Tiberium Stone Bricks, Slabs, stairs, and Walls
-Slowing Sword Class added for "On-Hit" effect reference for weapons.
-Looking into making Paxel COMPLETELY compatible with ANY Wood not just Vanilla and my own.
-Test Block is Present for Texture Testing Purposes.


======================================================
LEGACY 1.16.5 Changelog
0.5.2
======================================================
 (0.1 - 0.5): 10/08/2023 - 3/20/2024
 Changelog initiated:
 - Separated Crystal Tech mod from, Tutorial mod and Glowing Tree 16.5 mod.
 - Blossom Trees, Spread Logic, Tiberium Crops, Flower of Life, Deco Blocks, basic items,
 fluids, Ores, plagued weapons, Gundanium Armor, horse armor, Tags, Ore Gen, Tree gen, structure gen, and all associated
 textures, loot tables, and recipes added/created.
 -Added License and ReadMe

 (0.5.2): 3/22/2024
 - Explosion effect added when mining Blue, Red, and Purple Tiberium without a silk touch pickaxe.
 - Tiberium crop texture changed to Cross render type.
 - Fixed Tiberium and Ichor soil Sustain Plant Logic. Blocks now only accept specific plants/ certain types of Tiberium.
 - Began adding Tiberium Infection logic to Tiberium/Ichor soil, created necessary Mod Tags for infection logic,
 which will include Plagued Logs infecting other logs and leaves, and Plagued Leaves infecting other leaves.
 - Added explosion resistance to appropriate blocks. I.E Mod Metal blocks, Tiberium/Ichor Soil, and Blossom Trees.
 - Updated License and Readme.
 - Credits File Added.